--- a/templates/offers.html
+++ b/templates/offers.html
@@ -517,22 +517,29 @@ $j(document).ready(function () {
         });
 
 
-        // Start an interval that runs every 2 seconds
-        var intervalId = setInterval(function() {
-            // Check if the content of the info box is empty
+ // Start an interval that runs every 2 seconds
+var intervalId = setInterval(function() {
+    // Check if the content of the info box is empty
+    if ($j('#profit-calculation-status').text() === '') {
+        // If it is, wait for 1 second before checking again
+        setTimeout(function() {
+            // Check again if the content of the info box is still empty after 1 second
             if ($j('#profit-calculation-status').text() === '') {
-                // If it is, wait for 1 second before checking again
-                setTimeout(function() {
-                    // Check again if the content of the info box is still empty after 3 seconds
-                    if ($j('#profit-calculation-status').text() === '') {
-                        // If it is, remove the info box
-                        $j('#profit-calculation-status').remove();
-                        // Stop the interval
-                        clearInterval(intervalId);
-                    }
-                }, 3000);
+                // If it is, increment the counter
+                counter++;
+                // If the counter has reached 3, remove the info box and stop the interval
+                if (counter >= 3) {
+                    $j('#profit-calculation-status').remove();
+                    clearInterval(intervalId);
+                }
+            } else {
+                // If the content is not empty, reset the counter
+                counter = 0;
             }
-        }, 2000);
+        }, 1000);
+    }
+}, 2000);
+
 
 
 
