--- a/templates/offers.html
+++ b/templates/offers.html
@@ -517,6 +517,8 @@ $j(document).ready(function () {
         });
 
 
+var counter = 0;
+
  // Start an interval that runs every 2 seconds
 var intervalId = setInterval(function() {
     // Check if the content of the info box is empty
