add all parameters to offer pages

--- a/templates/estimate_price.html
+++ b/templates/estimate_price.html
@@ -1,3 +1,7 @@
+<!-- # Improvements
+# remove the line break that get created each time that you submit when it is already submitted -->
+
+
 {% extends "bootstrap/base.html" %}
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
