--- a/templates/estimate_price.html
+++ b/templates/estimate_price.html
@@ -39,10 +39,10 @@ Estimate Price
             <input type="text" id="model" placeholder="Model*" required class="form-control">
         </div>
         <div class="form-group">
-            <input type="text" id="modelName" placeholder="Model Name" class="form-control">
+            <input type="text" id="modelName" placeholder="Model Name (can be empty)" class="form-control">
         </div>
         <div class="form-group">
-            <input type="text" id="color" placeholder="Color (None if empty)" class="form-control">
+            <input type="text" id="color" placeholder="Color (can be empty)" class="form-control">
         </div>
         <div class="form-group">
             <input type="number" id="buying_price" placeholder="Buying Price*" required class="form-control">
@@ -51,7 +51,7 @@ Estimate Price
             <input type="number" id="days" placeholder="Days*" required class="form-control">
         </div>
         <div class="form-group">
-            <input type="text" id="material" placeholder="Material" class="form-control">
+            <input type="text" id="material" placeholder="Material (can be empty)" class="form-control">
         </div>
         <div class="form-group">
             <label>Condition:</label><br>
